# 02807_Project_Public

./: .env_template  README.md  Visualize_clustering.ipynb  _config.py  _tools.py  per_catchment_exclude_all.csv  per_catchment_exclude_periods.csv  produce_discharge_table.py  produce_discharge_table_seasonal.py  pyproject.toml  simple_load_and_plot_nc_file.ipynb
dtw/: dtw.ipynb  dtw_groups.ipynb
feature extraction/: TSFRESH_FEATURE_CATEGORIES.md  clustering_catchments.py  eval_clusters.py  evaluate_pca_kaiser.py  extract_features.py  pca_extracted_features.py  plot_pca.py  readme.md  reformat_cluster.py  segment_by_year.py  summarize_eval_clusters.py
seasonal/: SeasonalVisualClustering.ipynb
yearly/: yearly_clustering_dbscan.py  yearly_clustering_kmeans.py  yearly_clustering_plotmerger.py
yearly/year_clustering/: KMeans_clustering_year_2001.csv  KMeans_clustering_year_2002.csv  KMeans_clustering_year_2003.csv  KMeans_clustering_year_2004.csv  KMeans_clustering_year_2005.csv  KMeans_clustering_year_2006.csv  KMeans_clustering_year_2007.csv  KMeans_clustering_year_2008.csv  KMeans_clustering_year_2009.csv  KMeans_clustering_year_2010.csv  KMeans_clustering_year_2011.csv  KMeans_clustering_year_2012.csv  KMeans_clustering_year_2013.csv  KMeans_clustering_year_2014.csv  KMeans_clustering_year_2015.csv  KMeans_clustering_year_2016.csv  KMeans_clustering_year_2017.csv  KMeans_clustering_year_2018.csv  KMeans_clustering_year_2019.csv  KMeans_clustering_year_2020.csv  KMeans_clustering_year_2021.csv  KMeans_clustering_year_2022.csv  KMeans_clustering_year_pca_2001.csv  (+21 more)
(+395 files in other folders)
